--- a/app/src/main/res/drawable/ic_arrow_background_vertical.xml
+++ b/app/src/main/res/drawable/ic_arrow_background_vertical.xml
@@ -1,9 +1,9 @@
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="2016dp"
-    android:height="2017dp"
-    android:viewportWidth="2016"
-    android:viewportHeight="2017">
+    android:width="1008dp"
+    android:height="2016dp"
+    android:viewportWidth="1008"
+    android:viewportHeight="2016">
   <path
-      android:pathData="M1282.9,0.1c126.5,0 229.1,102.6 229.1,229.1V1786.8c0,126.5 -102.6,229.1 -229.1,229.1l-549.8,0.1c-126.5,0 -229.1,-102.6 -229.1,-229.1V229.3c0,-126.5 102.6,-229.1 229.1,-229.1l549.8,-0.1Z"
+      android:pathData="M778.9,0.1c126.5,0 229.1,102.6 229.1,229.1V1786.8c0,126.5 -102.6,229.1 -229.1,229.1l-549.8,0.1c-126.5,0 -229.1,-102.6 -229.1,-229.1V229.3C0,102.8 102.6,0.2 229.1,0.2L778.9,0.1Z"
       android:fillColor="#f0f3fd"/>
 </vector>
