--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -1,123 +1,110 @@
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/container"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <GridView
-        android:layout_width="200dp"
-        android:layout_height="200dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="120dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" >
-    </GridView>
-
-
-    <ImageView
+    <GridLayout
         android:id="@+id/arrows_background"
-        android:layout_width="275dp"
-        android:layout_height="274dp"
-        android:layout_marginLeft="68dp"
-        android:layout_marginTop="70dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_background" />
+        android:layout_width="180dp"
+        android:layout_height="180dp"
+        android:background="@drawable/ic_arrow_background"
+        android:columnCount="3"
+        android:rowCount="3"
+        android:layout_marginStart="60dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="40dp">
 
-    <ImageView
-        android:id="@+id/btn_arrow_up"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_arrow_up"
-        app:layout_constraintTop_toTopOf="@id/arrows_background"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background"
-        app:layout_constraintRight_toRightOf="@id/arrows_background"
-        android:layout_marginTop="5dp"/>
+        <ImageView
+            android:id="@+id/btn_arrow_up"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="0"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_btn_arrow_up" />
 
-    <ImageView
-        android:id="@+id/btn_arrow_down"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_arrow_down"
-        app:layout_constraintBottom_toBottomOf="@id/arrows_background"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background"
-        app:layout_constraintRight_toRightOf="@id/arrows_background"
-        android:layout_marginBottom="5dp"/>
+        <ImageView
+            android:id="@+id/btn_arrow_down"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="2"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_btn_arrow_down" />
 
-    <ImageView
-        android:id="@+id/btn_arrow_left"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_arrow_left"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background"
-        app:layout_constraintTop_toTopOf="@id/arrows_background"
-        app:layout_constraintBottom_toBottomOf="@id/arrows_background"
-        android:layout_marginLeft="5dp"/>
+        <ImageView
+            android:id="@+id/btn_arrow_left"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_btn_arrow_left" />
 
-    <ImageView
-        android:id="@+id/btn_arrow_right"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_arrow_right"
-        app:layout_constraintRight_toRightOf="@id/arrows_background"
-        app:layout_constraintTop_toTopOf="@id/arrows_background"
-        app:layout_constraintBottom_toBottomOf="@id/arrows_background"
-        android:layout_marginRight="5dp"/>
+        <ImageView
+            android:id="@+id/btn_arrow_right"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="1"
+            android:layout_column="2"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_btn_arrow_right" />
 
-    <ImageView
-        android:id="@+id/btn_arrow_middle"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_middle"
-        app:layout_constraintRight_toRightOf="@id/arrows_background"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background"
-        app:layout_constraintTop_toTopOf="@id/arrows_background"
-        app:layout_constraintBottom_toBottomOf="@id/arrows_background"/>
+        <ImageView
+            android:id="@+id/btn_arrow_middle"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="1"
+            android:layout_column="1"
+            android:layout_margin="5dp"
+            android:background="@drawable/ic_btn_middle" />
 
+    </GridLayout>
 
-
-<!--
-
-    <ImageView
+    <GridLayout
         android:id="@+id/arrows_background_vertical"
-        android:layout_width="275dp"
-        android:layout_height="274dp"
-        android:layout_marginTop="120dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_arrow_background_vertical" />
+        android:layout_width="90dp"
+        android:layout_height="180dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="60dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/ic_arrow_background_vertical"
+        android:columnCount="1"
+        android:rowCount="3">
 
-    <Button
-        android:id="@+id/btn_arrow_up_vertical"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_arrow_up"
-        app:layout_constraintTop_toTopOf="@id/arrows_background_vertical"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background_vertical"
-        app:layout_constraintRight_toRightOf="@id/arrows_background_vertical"
-        android:layout_marginTop="5dp"/>
+        <ImageView
+            android:id="@+id/btn_arrow_up_vertical"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/ic_btn_arrow_up" />
 
-    <Button
-        android:id="@+id/btn_arrow_down_vertical"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_arrow_down"
-        app:layout_constraintBottom_toBottomOf="@id/arrows_background_vertical"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background_vertical"
-        app:layout_constraintRight_toRightOf="@id/arrows_background_vertical"
-        android:layout_marginBottom="5dp"/>
+        <ImageView
+            android:id="@+id/btn_arrow_down_vertical"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/ic_btn_arrow_down" />
 
-    <Button
-        android:id="@+id/btn_arrow_middle_vertical"
-        android:layout_width="80dp"
-        android:layout_height="80dp"
-        android:background="@drawable/ic_btn_middle"
-        app:layout_constraintRight_toRightOf="@id/arrows_background_vertical"
-        app:layout_constraintLeft_toLeftOf="@id/arrows_background_vertical"
-        app:layout_constraintTop_toTopOf="@id/arrows_background_vertical"
-        app:layout_constraintBottom_toBottomOf="@id/arrows_background_vertical"/>
+        <ImageView
+            android:id="@+id/btn_arrow_middle_vertical"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/ic_btn_middle" />
 
--->
-</androidx.constraintlayout.widget.ConstraintLayout>
+    </GridLayout>
+
+</RelativeLayout>
