--- a/app/src/main/res/drawable/ic_btn_middle.xml
+++ b/app/src/main/res/drawable/ic_btn_middle.xml
@@ -5,5 +5,5 @@
     android:viewportHeight="572">
   <path
       android:pathData="M506.6,0.18c35.9,0 65.01,29.11 65.01,65.01V507.17c0,35.9 -29.11,65.01 -65.01,65.01l-442.05,-0.45c-35.9,0 -65.01,-29.11 -65.01,-65.01V64.75c0,-35.9 29.11,-65.01 65.01,-65.01L506.6,0.18Z"
-      android:fillColor="#9c67d6"/>
+      android:fillColor="#f47b2e"/>
 </vector>
