--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -6,6 +6,13 @@
     android:background="#300C10"
     tools:context=".MainActivity">
 
+    <ImageView
+        android:layout_width="400dp"
+        android:layout_height="100dp"
+        android:background="@drawable/ic_logo"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="20dp"/>
+
     <GridLayout
         android:id="@+id/arrows_background"
         android:layout_width="180dp"
@@ -71,19 +78,19 @@
     </GridLayout>
 
     <GridLayout
-        android:id="@+id/arrows_background_vertical"
+        android:id="@+id/arrows_background_vertical_right"
         android:layout_width="90dp"
         android:layout_height="180dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="60dp"
+        android:layout_marginEnd="40dp"
         android:layout_marginBottom="40dp"
         android:background="@drawable/ic_arrow_background_vertical"
         android:columnCount="1"
         android:rowCount="3">
 
         <ImageView
-            android:id="@+id/btn_arrow_up_vertical"
+            android:id="@+id/btn_arrow_up_vertical_right"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_row="0"
@@ -93,7 +100,7 @@
             android:background="@drawable/selector" />
 
         <ImageView
-            android:id="@+id/btn_arrow_down_vertical"
+            android:id="@+id/btn_arrow_down_vertical_right"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_row="2"
@@ -101,11 +108,55 @@
             android:layout_margin="5dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/selector"
-
             android:rotation="180"/>
 
         <ImageView
-            android:id="@+id/btn_arrow_middle_vertical"
+            android:id="@+id/btn_arrow_middle_vertical_right"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="1"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/ic_btn_middle" />
+
+    </GridLayout>
+
+    <GridLayout
+        android:id="@+id/arrows_background_vertical_left"
+        android:layout_width="90dp"
+        android:layout_height="180dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="150dp"
+        android:layout_marginBottom="40dp"
+        android:background="@drawable/ic_arrow_background_vertical"
+        android:columnCount="1"
+        android:rowCount="3">
+
+        <ImageView
+            android:id="@+id/btn_arrow_up_vertical_left"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="0"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/selector" />
+
+        <ImageView
+            android:id="@+id/btn_arrow_down_vertical_left"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_row="2"
+            android:layout_column="0"
+            android:layout_margin="5dp"
+            android:layout_marginLeft="20dp"
+            android:background="@drawable/selector"
+            android:rotation="180"/>
+
+        <ImageView
+            android:id="@+id/btn_arrow_middle_vertical_left"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_row="1"
