--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -25,7 +25,7 @@
         android:layout_marginBottom="40dp">
 
         <ImageView
-            android:id="@+id/btn_arrow_up"
+            android:id="@+id/btn_arrow_forward"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_row="0"
@@ -36,7 +36,7 @@
             android:clickable="true"/>
 
         <ImageView
-            android:id="@+id/btn_arrow_down"
+            android:id="@+id/btn_arrow_backward"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_row="2"
